src/objects/Leg__c.object
<CustomObject>
    <fields>
        <fullName>Event_Sensitivity__c</fullName>
        <label>Event Sensitivity?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Yes, within 3 hours (dom) or 5 hours (int) range</fullName>
                </value>
                <value>
                    <fullName>Yes, but outside 3 / 5 hour range</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expected_Billable_Time_per_FlightAware__c</fullName>
        <label>Expected Billable Time per FlightAware</label>
        <precision>13</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expense_Amount__c</fullName>
        <label>Expense Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expense_Date__c</fullName>
        <label>Expense Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expense_Note__c</fullName>
        <label>Expense Note</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Expense_Savings__c</fullName>
        <inlineHelpText>To be used for Prepaid MMF and Prepaid Lease Payments</inlineHelpText>
        <label>Expense Savings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expense_Status__c</fullName>
        <label>Expense Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Reconciled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expense_Type__c</fullName>
        <label>Expense Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Annual Insurance Premium</fullName>
                </value>
                <value>
                    <fullName>Annual Membership Fee</fullName>
                </value>
                <value>
                    <fullName>Carbon Offset</fullName>
                </value>
                <value>
                    <fullName>Charter Deposit</fullName>
                    <label>Charter Program Deposit</label>
                </value>
                <value>
                    <fullName>Commercial Travel</fullName>
                </value>
                <value>
                    <fullName>Deposit Refund</fullName>
                </value>
                <value>
                    <fullName>FET</fullName>
                </value>
                <value>
                    <fullName>Initiation Fee</fullName>
                </value>
                <value>
                    <fullName>Invoice Payment</fullName>
                </value>
                <value>
                    <fullName>Lease Deposit</fullName>
                </value>
                <value>
                    <fullName>Lease Payment</fullName>
                </value>
                <value>
                    <fullName>Misc.</fullName>
                </value>
                <value>
                    <fullName>MMF</fullName>
                </value>
                <value>
                    <fullName>Monthly Membership Fee</fullName>
                </value>
                <value>
                    <fullName>Prepaid Lease</fullName>
                </value>
                <value>
                    <fullName>Prepaid MMF</fullName>
                </value>
                <value>
                    <fullName>Referral Credit</fullName>
                </value>
                <value>
                    <fullName>Transfer to New Program Period</fullName>
                </value>
                <value>
                    <fullName>War Risk</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FET__c</fullName>
        <label>FET</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>First_Flight__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>First flight with either new vendor or AvP</inlineHelpText>
        <label>First Flight</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flight_Delay__c</fullName>
        <label>Flight Delay</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flight_Movement_in_Progress__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Used when waiting for information from vendor to move to Flown</inlineHelpText>
        <label>Flight Movement in Progress</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flight_Rule__c</fullName>
        <label>Flight Rule</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Part 121</fullName>
                </value>
                <value>
                    <fullName>Part 135</fullName>
                </value>
                <value>
                    <fullName>Part 91</fullName>
                </value>
                <value>
                    <fullName>Part 91k</fullName>
                </value>
                <value>
                    <fullName>Eu-ops</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flight_Status__c</fullName>
        <label>Flight Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Booked</fullName>
                </value>
                <value>
                    <fullName>Brutal Recovery – Flew Commercial</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Cleared</fullName>
                </value>
                <value>
                    <fullName>Departed</fullName>
                </value>
                <value>
                    <fullName>Flown</fullName>
                </value>
                <value>
                    <fullName>Imported</fullName>
                </value>
                <value>
                    <fullName>In Review - Alana</fullName>
                </value>
                <value>
                    <fullName>In Review - Amy</fullName>
                </value>
                <value>
                    <fullName>In Review - Andrew</fullName>
                </value>
                <value>
                    <fullName>In Review - Bill</fullName>
                </value>
                <value>
                    <fullName>In Review - Craig</fullName>
                </value>
                <value>
                    <fullName>In Review - Jaime</fullName>
                </value>
                <value>
                    <fullName>In Review - Jeff</fullName>
                </value>
                <value>
                    <fullName>In Review - Luke</fullName>
                </value>
                <value>
                    <fullName>In Review - Mark</fullName>
                </value>
                <value>
                    <fullName>In Review - Needs Assignment</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Reconciled</fullName>
                </value>
                <value>
                    <fullName>Special</fullName>
                </value>
                <value>
                    <fullName>Tentative</fullName>
                </value>
                <value>
                    <fullName>Vendor Could Cover Flight - Violation</fullName>
                    <label>Vendor Could Not Cover Flight - Violation</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flight_Tracking__c</fullName>
        <label>Flight Tracking</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Requested</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flightawre_Trip_Link__c</fullName>
        <inlineHelpText>To triple check flight time</inlineHelpText>
        <label>Flightawre Trip Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Fuel_Rate__c</fullName>
        <inlineHelpText>Multiplied by the billed hours.</inlineHelpText>
        <label>Fuel Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fuel_Stop_Location_if_applicable__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fuel Stop Location (if applicable)</label>
        <referenceTo>Airport__c</referenceTo>
        <relationshipName>Legs3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fuel_Stop__c</fullName>
        <label>Fuel Stop?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes - Unexpected</fullName>
                </value>
                <value>
                    <fullName>Yes - Planned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Future_Credit__c</fullName>
        <label>Future Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ground_Confirmed__c</fullName>
        <label>Ground Confirmed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ground_Cost_Estimate__c</fullName>
        <label>Ground Cost Estimate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ground_Details__c</fullName>
        <label>Ground Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ground_Requested__c</fullName>
        <label>Ground Requested</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes - Ordered</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>No - Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ground__c</fullName>
        <label>Ground</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Guaranteed_Fixed_Cost__c</fullName>
        <inlineHelpText>Fixed cost for guaranteed programs and is applied upon reporting.</inlineHelpText>
        <label>Guaranteed Fixed Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Guaranteed_Variable_Cost__c</fullName>
        <inlineHelpText>Out-of-pocket cost invoiced per flight leg (fuel, taxes, etc).</inlineHelpText>
        <label>Guaranteed Variable Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hangar__c</fullName>
        <label>Hangar</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Has_the_aircraft_been_in_maintenance__c</fullName>
        <label>Has the aircraft been in maintenance?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>High_Volume_Day__c</fullName>
        <label>High Volume Day?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hourly_Rate__c</fullName>
        <label>Hourly Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hours_Credited__c</fullName>
        <label>Hours Credited</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>If_Subcontracted_Operator__c</fullName>
        <inlineHelpText>This field auto-populates when &quot;subcontracted?&quot; field is checked yes</inlineHelpText>
        <label>If Subcontracted, Operator</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_no_Aircraft_Positioning_Airport__c</fullName>
        <inlineHelpText>4-Letter Airport Code</inlineHelpText>
        <label>If no, Aircraft Positioning Airport</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Important_Flight_Notes__c</fullName>
        <inlineHelpText>This is for all of us to keep in mind for QC purposes</inlineHelpText>
        <label>IMPORTANT FLIGHT NOTES</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Interchange_Ratio__c</fullName>
        <label>Interchange Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>International_Crew_Fee__c</fullName>
        <label>International Crew Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>International_Fees__c</fullName>
        <label>International Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>International_Ferry_Charge__c</fullName>
        <inlineHelpText>Make sure to include ferry fuel charge as well.</inlineHelpText>
        <label>International Ferry Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Intl_Customs_Confirmed_if_applicable__c</fullName>
        <label>Intl Customs Confirmed (if applicable)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_WiFi_working__c</fullName>
        <label>Is WiFi working?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Itinerary_Solution_Number__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Itinerary Solution Number</label>
        <referenceTo>Itinerary_Solution__c</referenceTo>
        <relationshipName>Legs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Late_Ops_Setup_if_applicable__c</fullName>
        <label>Late Ops Setup (if applicable)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Passenger_Group__c</fullName>
        <description>Used to calculate total reconciled hours by lead passenger for fractional summaries</description>
        <label>Lead Passenger Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Owner 1 Lead Passengers</fullName>
                </value>
                <value>
                    <fullName>Owner 2 Lead Passengers</fullName>
                </value>
                <value>
                    <fullName>Owner 3 Lead Passengers</fullName>
                </value>
                <value>
                    <fullName>Owner 4 Lead Passengers</fullName>
                </value>
                <value>
                    <fullName>Owner 5 Lead Passengers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Passenger__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Passenger</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Legs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Leg_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Leg Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Legs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Leg_Season__c</fullName>
        <formula>IF(OR(MONTH(Departure_Date__c)=11,MONTH(Departure_Date__c)=12,MONTH(Departure_Date__c)=1,MONTH(Departure_Date__c)=2,MONTH(Departure_Date__c)=3),&quot;WINTER&quot;,IF( OR(MONTH(Departure_Date__c)=6,MONTH(Departure_Date__c)=7,MONTH(Departure_Date__c)=8,MONTH(Departure_Date__c)=9),&quot;SUMMER&quot;,&quot;NA&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Leg Season</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leg_Sequence_Number__c</fullName>
        <inlineHelpText>Leg Sequence Number (e.g., 1, 2, 3, 4, 5).</inlineHelpText>
        <label>Leg Sequence #</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Length_of_Delay_minutes__c</fullName>
        <label>Length of Delay (minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Link_to_Flight_Tracker__c</fullName>
        <label>Link to Flight Tracker</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MEL_Notes__c</fullName>
        <label>MEL Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mass_Upload__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This leg was mass uploaded as part of a new client&apos;s flight history that AvP was not involved in.</inlineHelpText>
        <label>Mass Upload</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Max_Billed_Flight_Time__c</fullName>
        <formula>IF(  TEXT(Flight_Status__c) = &quot;Cancelled&quot;, 0, IF(AND (Solution_Category__c = &quot;Guaranteed&quot;, OR (Billed_Flight_Time__c = 0, Billed_Flight_Time__c = null)),Estimated_Flight_Time_hours__c , IF (AND(Solution_Category__c = &quot;Guaranteed&quot;, Billed_Flight_Time__c &gt;0),(Billed_Flight_Time__c- Hours_Credited__c ), max( Estimated_Flight_Time_hours__c , Billed_Flight_Time__c ))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If flight is guaranteed &amp; reconciled, use number in the billed flight time field
If guaranteed &amp; not reconciled, use number in the est. billed time field
If cancelled, put in 0
If a flight is non-guar, use greater of est. billed time or invoiced time</inlineHelpText>
        <label>Max Billed Flight Time</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Membership_Reconciling_Leg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This box is checked when 1 leg has to be split into 2 for deposit reconciliation purposes. Don&apos;t want to double-count the number of legs taken in a year</inlineHelpText>
        <label>Membership Reconciling Leg</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Minors_Requiring_Consent_Letter__c</fullName>
        <label>Minors Requiring Consent Letter?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Minors_with_one_or_no_guardian__c</fullName>
        <label>Minors with one or no guardian?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mission_Feasibility_Post__c</fullName>
        <label>Mission Feasibility - Post</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1. No expected aircraft performance issues based on range/pax count</fullName>
                </value>
                <value>
                    <fullName>2. There may be aircraft performance issues based on range/pax count</fullName>
                </value>
                <value>
                    <fullName>3. There is a high probability of aircraft performance issues based on range/pax count</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mission_Feasibility_Sc_Post__c</fullName>
        <label>Mission Feasibility (Sc.) Post</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mission_Feasibility_Score__c</fullName>
        <label>Mission Feasibility (Score)</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mission_Feasibility_W_Post__c</fullName>
        <defaultValue>0.10</defaultValue>
        <label>Mission Feasibility (W) Post</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Mission_Feasibility_W_Sc_Post__c</fullName>
        <formula>Mission_Feasibility_W_Post__c  *  Mission_Feasibility_Sc_Post__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mission Feasibility (W Sc.) Post</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mission_Feasibility_Weight__c</fullName>
        <defaultValue>0.10</defaultValue>
        <label>Mission Feasibility (Weight)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Mission_Feasibility_Weighted_Score__c</fullName>
        <formula>Mission_Feasibility_Score__c * Mission_Feasibility_Weight__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mission Feasibility (Weighted Score)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mission_Feasibility__c</fullName>
        <label>Mission Feasibility</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1. No expected aircraft performance issues based on range/pax count</fullName>
                </value>
                <value>
                    <fullName>2. There may be aircraft performance issues based on range/pax count</fullName>
                </value>
                <value>
                    <fullName>3. There is a high probability of aircraft performance issues based on range/pax count</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Need_to_Confirm_NJ_Portal__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check box on flights input from statement.</inlineHelpText>
        <label>Need to Confirm NJ Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Account_Relationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New Account Relationship</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Legs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_Airport__c</fullName>
        <label>New Airport?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NEW</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Operator_Comment__c</fullName>
        <description>AvP Internal Feedback regarding Operator</description>
        <label>Operator Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operator_Invoice_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The invoice total received from the operator.</description>
        <inlineHelpText>Use to enter the total amount on the operator invoice.</inlineHelpText>
        <label>Operator Invoice Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Operator_Name__c</fullName>
        <formula>if(RecordType.Name=&quot;Expense&quot;, 
Client_Program__r.Operator_Program__r.Operator__r.Name,
Itinerary_Solution_Number__r.Operator__r.Name 
 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Operator Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operator_Score__c</fullName>
        <description>AvP Internal Feedback regarding Operator</description>
        <label>Operator Score</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Not Satisfied</fullName>
                </value>
                <value>
                    <fullName>2 - Somewhat Satisfied</fullName>
                </value>
                <value>
                    <fullName>3 - Satisfied</fullName>
                </value>
                <value>
                    <fullName>4 - Very Satisfied</fullName>
                </value>
                <value>
                    <fullName>5 - Extremely Satisfied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Operator_departure_time_adjusted__c</fullName>
        <label>Did operator adjust departure time?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Original_Aircraft__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Aircraft</label>
        <referenceTo>Aircraft__c</referenceTo>
        <relationshipName>Legs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_Estimated_Billable_Time__c</fullName>
        <inlineHelpText>This is the estimated billable time per trip sheet.  (Interchange ratio NOT applied)</inlineHelpText>
        <label>Original Estimated Billable Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Originally_scheduled_airport__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>What airport was the aircraft originally scheduled for?</inlineHelpText>
        <label>Originally scheduled airport</label>
        <referenceTo>Airport__c</referenceTo>
        <relationshipName>Legs6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Experiential_Comment_Score__c</fullName>
        <label>Other Experiential Comment Score</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Not Satisfied</fullName>
                </value>
                <value>
                    <fullName>2 - Somewhat Satisfied</fullName>
                </value>
                <value>
                    <fullName>3 - Satisfied</fullName>
                </value>
                <value>
                    <fullName>4 - Very Satisfied</fullName>
                </value>
                <value>
                    <fullName>5 - Extremely Satisfied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Experiential_Comment__c</fullName>
        <label>Other Experiential Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Taxes_Fees__c</fullName>
        <label>Other Taxes &amp; Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Overall_Experience_Comment__c</fullName>
        <label>Overall Experience Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overall_Experience_Score__c</fullName>
        <label>Overall Experience Score</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Not Satisfied</fullName>
                </value>
                <value>
                    <fullName>2 - Somewhat Satisfied</fullName>
                </value>
                <value>
                    <fullName>3 - Satisfied</fullName>
                </value>
                <value>
                    <fullName>4 - Very Satisfied</fullName>
                </value>
                <value>
                    <fullName>5 - Extremely Satisfied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PCE_Definition_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Definition Lookup</label>
        <referenceTo>FSTR__PCE_Definition__c</referenceTo>
        <relationshipLabel>Leg</relationshipLabel>
        <relationshipName>CO_Leg</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PCE_Definition__c</fullName>
        <label>Definition</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Passanger_Count__c</fullName>
        <description>Reflects the passenger count at the time of booking/confirmation.</description>
        <label>Passenger Count</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Passenger_Manifest__c</fullName>
        <inlineHelpText>Separate passenger names with a semicolon;</inlineHelpText>
        <label>Passenger Manifest</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Passenger_Weights_Provided_to_Operator__c</fullName>
        <label>Passenger Weights Provided to Operator?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>